--- a/src/_includes/pages/backend.njk
+++ b/src/_includes/pages/backend.njk
@@ -10,7 +10,6 @@ plugins:
     
     <section style="max-width: 90rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
         <div class="flex flex-col md:flex-row gap-1 lg:gap-10 mt-6">
-
             <!-- Text Container: Always on the right -->
             <div
             class="flex flex-col justify-center items-center flex-shrink-0 p-2 md:p-0 md:w-2/3"
@@ -36,7 +35,7 @@ plugins:
             </div>
             </div>
             <div
-            class="relative h-[360px] overflow-hidden rounded-lg max-h-72 md:max-h-full p-0 md:w-1/3"
+            class="transition-transform transform hover:scale-105 relative h-[360px] overflow-hidden rounded-lg max-h-72 md:max-h-full p-0 md:w-1/3"
             >
             {% image "src/assets/images/ajincodew_man.tif", "woman smilling", ["webp","png"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"} %}
             </div>
