--- a/src/_includes/pages/aboutus.njk
+++ b/src/_includes/pages/aboutus.njk
@@ -10,31 +10,17 @@ plugins:
 <main class="flex-grow pt-16">
     <section style="max-width: 90rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
         <div class="flex flex-col md:flex-row gap-1 lg:gap-10 mt-6">
-            <!-- Text Container: Always on the right -->
-            <div
-                class="flex flex-col justify-center items-center flex-shrink-0 p-2 md:p-0 md:w-2/3"
-                dir="{{ dir }}"
-            >
-            <div class="text-center rtl:lg:text-right ltr:lg:text-left self-start md:text-right">
-                <h2 class="text-2xl font-bold sm:text-3xl">
-                إبدأ رحلتك الآن في عالم البرمجة والتصميم، وطوّر مهاراتك، وافتح آفاقًا جديدة مع أكاديمية أجي نكوديو!
-                </h2>
-                <p class="mt-4 text-lg mb-4 md:mb-0">
-                إكتسب المهارات الرقمية التي تساعدك على تحقيق أهدافك الشخصية والمهنية من خلال برامج تدريبية مبتكرة تلبي احتياجات سوق العمل. انضم إلى أكاديمية آجي نكوديو لتتعلم من نخبة الخبراء في المجال، وابدأ رحلتك نحو مستقبل مهني واعد
-                </p>
-                <div class="mx-auto max-w-none" x-data>
-                <a 
-                    class="transition-transform transform hover:scale-105 btn text-white w-full md:max-w-fit md:my-6"
-                    style="background-color:#0fb579" 
-                    href="/ar/#trainings"
-                >
-                    أريد أن أتعلم
-                </a>
+            <div class="flex flex-col justify-center items-center flex-shrink-0 p-2 md:p-0 md:w-2/3" dir="{{ dir }}" >
+                <div class="text-center rtl:lg:text-right ltr:lg:text-left self-start md:text-right">
+                    <h2 class="text-2xl font-bold sm:text-3xl">إبدأ رحلتك الآن في عالم البرمجة والتصميم، وطوّر مهاراتك، وافتح آفاقًا جديدة مع أكاديمية أجي نكوديو!</h2>
+                    <p class="mt-4 text-lg mb-4 md:mb-0">إكتسب المهارات الرقمية التي تساعدك على تحقيق أهدافك الشخصية والمهنية من خلال برامج تدريبية مبتكرة تلبي احتياجات سوق العمل. انضم إلى أكاديمية آجي نكوديو لتتعلم من نخبة الخبراء في المجال، وابدأ رحلتك نحو مستقبل مهني واعد</p>
+                    <div class="mx-auto max-w-none" x-data>
+                        <a class="transition-transform transform hover:scale-105 btn text-white w-full md:max-w-fit md:my-6" style="background-color:#0fb579" href="#trainings">أريد أن أتعلم</a>
+                    </div>
                 </div>
             </div>
-            </div>
             <div class="block overflow-hidden transition-transform transform hover:scale-105 relative h-[360px] overflow-hidden rounded-lg max-h-72 md:max-h-full p-0 md:w-1/3" >
-                {% image "src/assets/images/ajincodew_photos/ajincodewacademy_home.png", "woman smilling", ["webp","png"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"} %}
+                {% image "src/assets/images/home.png", "woman smilling", ["webp","png"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"} %}
             </div>
         </div>
     </section>
@@ -112,7 +98,7 @@ plugins:
             <div class="grid grid-cols-1 gap-8 mt-8 xl:mt-16 md:grid-cols-2 xl:grid-cols-2">
                 <div class="transition-transform transform hover:scale-105 px-12 py-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-[#0fb579] dark:border-base-700 dark:hover:border-transparent">
                     <div class="flex flex-col sm:-mx-4 sm:flex-row">
-                        {% image "src/assets/images/K.svg", "woman smiling", ["svg","svg"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"flex-shrink-0 object-cover w-24 h-24"} %}
+                        {% image "src/assets/images/founders/karim.svg", "woman smiling", ["svg","svg"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"flex-shrink-0 object-cover w-24 h-24"} %}
                         <div class="mt-4 sm:mx-4 sm:mt-0">
                             <h1 class="text-xl font-semibold capitalize md:text-2xl dark:text-dark group-hover:text-white">
                             كريم العيساوي
@@ -158,7 +144,7 @@ plugins:
 
                 <div class="transition-transform transform hover:scale-105 px-12 py-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-[#0fb579] dark:border-base-700 dark:hover:border-transparent">
                     <div class="flex flex-col sm:-mx-4 sm:flex-row">
-                        {% image "src/assets/images/A.svg", "woman smiling", ["svg","svg"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"flex-shrink-0 object-cover w-24 h-24"} %}
+                        {% image "src/assets/images/founders/karim.svg", "woman smiling", ["svg","svg"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"flex-shrink-0 object-cover w-24 h-24"} %}
             
                         <div class="mt-4 sm:mx-4 sm:mt-0">
                             <h1 class="text-xl font-semibold capitalize md:text-2xl dark:text-dark group-hover:text-white">أشرف تفاح</h1>
@@ -232,7 +218,7 @@ plugins:
         {# picture #}
         <div
             class="relative h-[290px] overflow-hidden rounded-lg max-h-72 md:max-h-full ">
-            {% image "src/assets/images/ajincodew_photos/certificate_ajincodew25.png", "certificate", ["webp","png"], [300,600], "(min-width: 780px) 360px, 259px",
+            {% image "src/assets/images/certificate.png", "certificate", ["webp","png"], [300,600], "(min-width: 780px) 360px, 259px",
             {class:"absolute inset-0 h-full mx-auto w-fit object-contain"}%}
         </div>
         </div>
