--- a/src/_includes/pages/home.njk
+++ b/src/_includes/pages/home.njk
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="block overflow-hidden transition-transform transform hover:scale-105 relative h-[360px] overflow-hidden rounded-lg max-h-72 md:max-h-full p-0 md:w-1/3" >
-                {% image "src/assets/images/ajincodew_photos/ajincodewacademy_home.png", "woman smilling", ["webp","png"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"} %}
+                {% image "src/assets/images/home.png", "woman smilling", ["webp","png"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"} %}
             </div>
         </div>
     </section>
@@ -265,7 +265,7 @@
 
             <div
                 class="relative h-[290px] overflow-hidden rounded-lg max-h-72 md:max-h-full ">
-                {% image "src/assets/images/ajincodew_photos/certificate_ajincodew25.png", "certificate", ["webp","png"], [300,600], "(min-width: 780px) 360px, 259px",
+                {% image "src/assets/images/certificate.png", "certificate", ["webp","png"], [300,600], "(min-width: 780px) 360px, 259px",
                 {class:"absolute inset-0 h-full mx-auto w-fit object-contain"}%}
             </div>
         </div>
@@ -334,24 +334,12 @@
         function updateTransform() {
             zoomableWrapper.style.transform = `scale(${scale}) translate(${currentX}px, ${currentY}px)`;
         }
-
-        zoomableWrapper.addEventListener("mousedown", (e) => {
-            isDragging = true;
-            startX = e.clientX - currentX;
-            startY = e.clientY - currentY;
-            zoomableWrapper.style.cursor = "grabbing";
-        });
-
+        
         document.addEventListener("mousemove", (e) => {
             if (!isDragging) return;
             currentX = e.clientX - startX;
             currentY = e.clientY - startY;
             updateTransform();
-        });
-
-        document.addEventListener("mouseup", () => {
-            isDragging = false;
-            zoomableWrapper.style.cursor = "grab";
         });
     </script>
     
