--- a/src/_includes/pages/aboutus.njk
+++ b/src/_includes/pages/aboutus.njk
@@ -1,14 +1,9 @@
 ---
 layout: main.njk
-plugins:
-    - cta
-    - mask
-    - cleave-phone.ma
-    - swiper
 ---
 
 <main class="flex-grow pt-16">
-    <section style="max-width: 90rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section  class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6 me-32 ms-32">
         <div class="flex flex-col md:flex-row gap-1 lg:gap-10 mt-6">
             <div class="flex flex-col justify-center items-center flex-shrink-0 p-2 md:p-0 md:w-2/3" dir="{{ dir }}" >
                 <div class="text-center rtl:lg:text-right ltr:lg:text-left self-start md:text-right">
@@ -25,7 +20,7 @@ plugins:
         </div>
     </section>
 
-    <section style="max-width: 90rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section  class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6 me-32 ms-32">
         <div class="flex flex-col md:flex-row-reverse gap-6 md:gap-10">
             <div class="">
                 <p class=" mb-2 md:mb-3 text-2xl md:text-3xl font-bold text-base-900 text-right ltr:text-left">
@@ -46,7 +41,7 @@ plugins:
         </div>
     </section>
 
-    <section style="max-width: 90rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section  class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6 me-32 ms-32">
         <p class='text-center text-3xl md:text-3xl font-bold mb-4 md:mb-6' >قيمنا</p>
         <div class="grid grid-cols-1 gap-4 md:gap-4 md:grid-cols-2">
             <div class="flex flex-row-reverse items-start text-right ltr:text-left ml-auto">
@@ -91,7 +86,7 @@ plugins:
         </div>
     </section>
 
-    <section style="max-width: 90rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section  class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6 me-32 ms-32">
         <div class="container px-6 mx-auto">
             <p class='text-center text-3xl md:text-3xl font-bold mb-4 md:mb-6'>فريق العمل</p>
             <p class="max-w-2xl mx-auto my-6 text-center text-base-500 dark:text-base-300">أعضاء هذا الفريق هم المبدعون والمؤسسون لأكاديمية اجي نكوديو الإلكترونية المتميزة</p>
@@ -190,7 +185,7 @@ plugins:
         </div>
     </section>
 
-    <section style="max-width: 90rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section  class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6 me-32 ms-32">
         {# hero section #}
         <div class="grid grid-cols-1 gap-1 lg:gap-16 md:grid-cols-2 ">
         <div class=" flex flex-col justify-center items-center flex-shrink-0 md:p-0
@@ -224,7 +219,7 @@ plugins:
         </div>
     </section>  
     
-    <section style="max-width: 90rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section  class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6 me-32 ms-32">
         <div class="text-center grid grid-cols-1 gap-1">    
             <div class="flex justify-center flex-col items-center col-span-1 ">
                 <p class="text-2xl font-bold sm:text-3xl mb-3 md:mb-4">
