--- a/src/_includes/pages/backend.njk
+++ b/src/_includes/pages/backend.njk
@@ -1,14 +1,10 @@
 ---
 layout: main.njk
-plugins:
-    - cta
-    - mask
-    - cleave-phone.ma
-    - swiper
 ---
+
 <main class="flex-grow pt-12"> 
     
-    <section style="max-width: 90rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section style="max-width: 100rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
         <div class="flex flex-col md:flex-row gap-1 lg:gap-10 mt-6">
             <!-- Text Container: Always on the right -->
             <div
@@ -42,7 +38,7 @@ plugins:
         </div>
     </section>
 
-    <div style="max-width: 90rem;" class='flex flex-col-reverse md:flex-row-reverse md:ltr:flex-row relative md:mx-auto md:justify-center'>
+    <div style="max-width: 100rem;" class='flex flex-col-reverse md:flex-row-reverse md:ltr:flex-row relative md:mx-auto md:justify-center'>
         <section class="relative " id="content">
             <div class="relative max-w-6xl mx-auto px-4 md:px-0 md:mx-0">
                 <div class="max-w-3xl mx-auto text-right ltr:text-left py-4 px-2 sm:px-4 md:py-6">
@@ -235,7 +231,7 @@ plugins:
         </section>    
     </div>
 
-    <section style="max-width: 90rem;" id="trainings" class='relative mx-auto sm:px-6 mb-6 pt-6'>
+    <section style="max-width: 100rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
         <p class='text-center text-2xl md:text-3xl font-bold mb-2'>أكثر من مجرد تدريب</p>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
             <div class="flex flex-row-reverse items-start text-right ltr:text-left ml-auto rounded-2xl border p-4 ms-2 me-2">
@@ -268,9 +264,8 @@ plugins:
         </div>
         <div id="pricing"></div>
     </section>
-   
 
-    <section style="max-width: 90rem;" class="relative mx-auto py-6 px-5 sm:px-12 mb-4 md:py-8">
+    <section style="max-width: 100rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
         <div class="grid grid-cols-1">
             <div id="countdown" class="relative max-w-6xl mx-auto px-4">
                 <div class="flex flex-col items-center text-center">
@@ -336,7 +331,83 @@ plugins:
         </div>
     </section> 
 
-    {% jsx "FAQ", name="backend" %}
+    <section style="max-width: 100rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+      <div class="py-8 md:py-8">
+        <div class="md:gap-4">
+          <div class="max-w-xl md:max-w-none md:w-full mx-auto md:col-span-7 lg:col-span-6 md:mt-6">
+            <p class='text-center text-2xl md:text-3xl font-bold mb-2'> أسئلة متكررة </p>
+            <div class="space-y-2">
+              <details class="group rounded-lg border border-gray-200 shadow-md">
+                <summary class="flex items-center justify-between p-3 rounded-lg cursor-pointer">
+                  <h5 class="font-bold">📌 كيف يمكنني التسجيل في التدريب؟</h5>
+                  <svg class="flex-shrink-0 mx-1 w-5 h-5 transition duration-300 group-open:-rotate-180" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M19 9l-7 7-7-7" />
+                  </svg>
+                </summary>
+                <p class="px-4 my-3 leading-relaxed grid grid-cols-1">
+                  <span>املأ الاستمارة الخاصة بالتدريب.</span>
+                  <span>بعد التسجيل، سنرسل لك RIB الخاص بالدفع.</span>
+                  <span>بعد تأكيد الدفع، أرسل لنا إثبات الدفع.</span>
+                  <span>ستتم إضافتك إلى مجموعة واتساب الخاصة بالمجموعة.</span>
+                </p>
+              </details>
+              <details class="group rounded-lg border border-gray-200 shadow-md">
+                <summary class="flex items-center justify-between p-3 rounded-lg cursor-pointer">
+                  <h5 class="font-bold">💳 ما هي طرق الدفع المتاحة؟</h5>
+                  <svg class="flex-shrink-0 mx-1 w-5 h-5 transition duration-300 group-open:-rotate-180" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M19 9l-7 7-7-7" />
+                  </svg>
+                </summary>
+                <p class="px-4 my-3 leading-relaxed grid grid-cols-1">
+                  <span>الدفع عن طريق تحويل بنكي (Virement Bancaire).</span>
+                  <span>يمكنك التواصل معنا في حال كنت بحاجة لمزيد من التفاصيل حول الدفع.</span>
+                </p>
+              </details>
+              <details class="group rounded-lg border border-gray-200 shadow-md">
+                <summary class="flex items-center justify-between p-3 rounded-lg cursor-pointer">
+                  <h5 class="font-bold">🤔 هل يجب أن أكون متمكناً من البرمجة قبل البدء؟</h5>
+                  <svg class="flex-shrink-0 mx-1 w-5 h-5 transition duration-300 group-open:-rotate-180" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M19 9l-7 7-7-7" />
+                  </svg>
+                </summary>
+                <p class="px-4 my-3 leading-relaxed grid grid-cols-1">
+                  <span>لا! هذا التدريب مصمم لجميع المستويات، حتى لو لم تكن لديك أي خبرة سابقة في البرمجة.</span>
+                  <span>📌 المدربون سيبدأون معك من الصفر، خطوة بخطوة حتى تصبح جاهزًا للعمل في المجال.</span>
+                </p>
+              </details>
+              <details class="group rounded-lg border border-gray-200 shadow-md">
+                <summary class="flex items-center justify-between p-3 rounded-lg cursor-pointer">
+                  <h5 class="font-bold">🏡 هل يجب أن أذهب إلى مكان معين لحضور التدريب؟</h5>
+                  <svg class="flex-shrink-0 mx-1 w-5 h-5 transition duration-300 group-open:-rotate-180" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M19 9l-7 7-7-7" />
+                  </svg>
+                </summary>
+                <p class="px-4 my-3 leading-relaxed grid grid-cols-1">
+                  <span>لا! التدريب 100% عن بُعد، يمكنك التعلم من أي مكان في المغرب (أو حتى من أي مكان في العالم).</span>
+                  <span>كل ما تحتاجه هو حاسوب واتصال بالإنترنت، ونحن سنكون معك في كل خطوة.</span>
+                </p>
+              </details>
+              <details class="group rounded-lg border border-gray-200 shadow-md">
+                <summary class="flex items-center justify-between p-3 rounded-lg cursor-pointer">
+                  <h5 class="font-bold">🎯 لماذا هذا التدريب هو الخيار المثالي لك؟</h5>
+                  <svg class="flex-shrink-0 mx-1 w-5 h-5 transition duration-300 group-open:-rotate-180" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M19 9l-7 7-7-7" />
+                  </svg>
+                </summary>
+                <p class="px-4 my-3 leading-relaxed grid grid-cols-1">
+                  <span>تعلم أسرع: في 3 أشهر فقط ستتمكن من تطوير تطبيقات حقيقية!</span>
+                  <span>تدريب عملي: مشاريع حقيقية لإضافة خبرة قوية إلى سيرتك الذاتية.</span>
+                  <span>مدربون محترفون: إرشاد مستمر من خبراء في المجال.</span>
+                  <span>شهادة معتمدة: لتعزيز فرصك في سوق العمل.</span>
+                  <span>فرص توظيف: تأهلك للحصول على وظيفة في مجال البرمجة بعد التدريب!</span>
+                </p>
+              </details>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script>
     // Set the date we're counting down to
     const countDownDate = new Date("Apr 30, 2025 23:59:59").getTime();
