--- a/src/_includes/pages/home.njk
+++ b/src/_includes/pages/home.njk
@@ -1,7 +1,13 @@
 ---
     layout: main.njk
     title: "Ajincodew academy - home page"
+    plugins:
+        - cta
+        - mask
+        - cleave-phone.ma
+        - swiper
 ---
+
 
 <main class="flex-grow pt-16">
     <section style="" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6 me-32 ms-32">
