--- a/src/_includes/pages/python.njk
+++ b/src/_includes/pages/python.njk
@@ -1,6 +1,12 @@
 ---
 layout: main.njk
+plugins:
+    - cta
+    - mask
+    - cleave-phone.ma
+    - swiper
 ---
+
 
 <main class="flex-grow pt-12"> 
     
