fix: fix icons bug

--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -45,7 +45,10 @@
 
         <!-- Favicon -->
         <link rel="icon" type="image/svg+xml" href="/ajincodew.svg" />
-
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        />
         <!-- Additional External Scripts -->
         <script src="https://kit.fontawesome.com/0e1c2ad640.js" crossorigin="anonymous"></script>
 
@@ -55,6 +58,9 @@
         <!-- Favicon Sizes for Browsers -->
         <link rel="icon" type="image/png" sizes="32x32" href="/ajincodew.png?v=1">
         <link rel="icon" type="image/png" sizes="16x16" href="/ajincodew.png?v=1">
+
+        <!-- Web App Manifest -->
+        <link rel="manifest" href="/site.webmanifest?v=1">
 
         <!-- Safari Pinned Tab Icon -->
         <link rel="mask-icon" href="/safari-pinned-tab.svg?v=1" color="#5bbad5">
@@ -67,6 +73,9 @@
 
         <!-- Theme Color -->
         <meta name="theme-color" content="#ffffff">
+
+        <!-- Facebook Domain Verification -->
+        <meta name="facebook-domain-verification" content="shf31z6j1ih9ff63lf5inn2c4gouo9" />
         </script>
     </head>
     <body style="user-select: none;" class=" text-base-900 dark:bg-gray-900 dark:text-white font-inter antialiased  text-base-900 dark:bg-gray-900 dark:text-white tracking-tight flex flex-col min-h-screen">
