--- a/src/_includes/pages/frontend.njk
+++ b/src/_includes/pages/frontend.njk
@@ -10,7 +10,7 @@ plugins:
 
 <main class="flex-grow pt-12"> 
     
-    <section style="max-width: 100rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section class="max-w-7xl relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
         <div class="flex flex-col md:flex-row gap-1 lg:gap-10 mt-6">
             <!-- Text Container: Always on the right -->
             <div
@@ -44,7 +44,7 @@ plugins:
         </div>
     </section>
 
-    <div style="max-width: 100rem;" class='flex flex-col-reverse md:flex-row-reverse md:ltr:flex-row relative md:mx-auto md:justify-center'>
+    <div class='"max-w-7xl flex flex-col-reverse md:flex-row-reverse md:ltr:flex-row relative md:mx-auto md:justify-center'>
         <section class="relative" id="content">
             <div class="relative max-w-6xl mx-auto px-4 md:px-0 md:mx-0">
                 <div class="max-w-3xl mx-auto text-right ltr:text-left py-4 px-2 sm:px-4 md:py-6">
@@ -202,7 +202,7 @@ plugins:
         </section>
     </div>
 
-    <section style="max-width: 100rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section class="max-w-7xl relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
         <p class='text-center text-2xl md:text-3xl font-bold mb-2'>أكثر من مجرد تدريب</p>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
             <div class="flex flex-row-reverse items-start text-right ltr:text-left ml-auto rounded-2xl border p-4 ms-2 me-2">
@@ -236,13 +236,13 @@ plugins:
         <div id="pricing"></div>
     </section>
 
-    <div class="w-full max-w-3xl mx-auto px-4 md:py-4 flex flex-col items-center space-y-4" dir="rtl">
+    <section class="max-w-7xl relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
         <!-- Heading -->
-        <h2 class="text-xl md:text-2xl font-bold text-neutral-800">
+        <h2 class="text-center text-xl md:text-2xl font-bold text-neutral-800">
         الوقت المتبقي على انتهاء التسجيل  </h2>
 
         <!-- Timer tiles -->
-        <div id="exam-countdown" class="flex flex-wrap justify-center gap-3 md:gap-4">
+        <div id="exam-countdown" class="mt-2 flex flex-wrap justify-center gap-3 md:gap-4">
 
             <!-- Days -->
             <div class="flex flex-col items-center">
@@ -277,9 +277,9 @@ plugins:
             </div>
 
         </div>
-    </div>
+    </section>
 
-    <section style="max-width: 100rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section class="max-w-7xl relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
         <div class="grid grid-cols-1">
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
                 <div class="transition-transform transform hover:scale-105 flex flex-col justify-between items-start  h-70 md:h-100 w-full p-4 rounded-2xl border shadow-sm">
@@ -336,7 +336,7 @@ plugins:
         </div>
     </section> 
 
-    <section style="max-width: 100rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section class="max-w-7xl relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
       <div class="py-8 md:py-8">
         <div class="md:gap-4">
           <div class="max-w-xl md:max-w-none md:w-full mx-auto md:col-span-7 lg:col-span-6 md:mt-6">
